re PR c++/8906 (segmentation fault when parsing nested-class definition)

PR c++/8906
	* decl.c (lookup_name_real): Use IMPLICIT_TYPENAME_P.
	* decl2.c (handle_class_head): Check it.

	PR c++/8906
	* g++.dg/template/nested2.C: New test.

From-SVN: r63239