gcc/testsuite/g++.dg/template/nested2.C
@@ -1,0 +1,9 @@
+template <class T> class CO {
+    class CI1 {
+	class CI2;
+    };
+};
+
+template <class T>
+class CO<T>::CI1::CI2 {};
+
